cmake_minimum_required(VERSION 3.13)
project(cpp-algorithms)

set(CMAKE_CXX_STANDARD 17)

include_directories("include")

add_executable(linked_list src/demo/linked_list.cpp)
add_executable(circular_queue src/demo/circular_queue.cpp)
add_executable(linked_list_queue src/demo/linked_list_queue.cpp)
add_executable(linked_list_stack src/demo/linked_list_stack.cpp)
add_executable(stack src/demo/stack.cpp)
add_executable(trie_tree src/demo/trie_tree.cpp)
add_executable(circular_linked_list src/demo/circular_linked_list.cpp)
add_executable(binary_search_tree src/demo/binary_search_tree.cpp)
add_executable(segment_tree src/demo/segment_tree.cpp)
add_executable(union_find src/demo/union_find.cpp)
add_executable(avl_tree src/demo/avl_tree.cpp)
add_executable(red_black_tree src/demo/red_black_tree.cpp)
add_executable(hash_map src/demo/hash_map.cpp)
add_executable(linked_list_map src/demo/linked_list_map.cpp)
add_executable(kd_tree src/demo/kd_tree.cpp)