cmake_minimum_required(VERSION 3.13)
project(cpp-algorithms)

set(CMAKE_CXX_STANDARD 17)

include_directories("include")

add_executable(linked_list src/examples/linked_list.cpp)
add_executable(circular_queue src/examples/circular_queue.cpp)
add_executable(linked_list_queue src/examples/linked_list_queue.cpp)
add_executable(linked_list_stack src/examples/linked_list_stack.cpp)
add_executable(stack src/examples/stack.cpp)
add_executable(trie_tree src/examples/trie_tree.cpp)
add_executable(circular_linked_list src/examples/circular_linked_list.cpp)
add_executable(binary_search_tree src/examples/binary_search_tree.cpp)
add_executable(segment_tree src/examples/segment_tree.cpp)
add_executable(union_find src/examples/union_find.cpp)
add_executable(avl_tree_map src/examples/avl_tree_map.cpp)
add_executable(red_black_tree src/examples/red_black_tree.cpp)
add_executable(hash_map src/examples/hash_map.cpp)
add_executable(linked_list_map src/examples/linked_list_map.cpp)
add_executable(kd_tree src/examples/kd_tree.cpp)
add_executable(binary_heap src/examples/binary_heap.cpp)
add_executable(priority_queue src/examples/priority_queue.cpp)
add_executable(dense_weighted_graph src/examples/dense_weighted_graph.cpp)
add_executable(sparse_graph src/examples/sparse_graph.cpp)